# lldb-formatters

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt
.github/workflows/: check-formatting.yml  (+1 more)
boost-json/tests/: CMakeLists.txt
boost-json/tests/array/: test.cpp  test.py
boost-json/tests/key_value_pair/: test.cpp  test.py
boost-json/tests/object/: test.cpp  test.py
boost-json/tests/value/: test.cpp  test.py
boost-unordered/: CMakeLists.txt
qt6/: CMakeLists.txt  README.md
qt6/scripts/: constants.py  qt6.py  qt_constants.py
qt6/src/: ContainerTypes.hpp  CoreTypes.hpp  main.cpp
qt6/tests/: CMakeLists.txt
qt6/tests/QBasicAtomicInteger/: test.cpp  test.py
qt6/tests/QBasicAtomicPointer/: test.cpp  test.py
qt6/tests/QByteArray/: test.cpp  test.py
qt6/tests/QChar/: test.cpp  test.py
qt6/tests/QCheckedInt/: test.cpp  test.py
qt6/tests/QDate/: test.cpp  test.py
qt6/tests/QDateTime/: test.cpp  test.py
qt6/tests/QDir/: test.cpp  test.py
qt6/tests/QFile/: test.cpp  test.py
qt6/tests/QFileInfo/: test.cpp  test.py
qt6/tests/QFlags/: test.cpp  test.py
qt6/tests/QGenericMatrix/: test.cpp  test.py
qt6/tests/QHash/: test.cpp  test.py
qt6/tests/QHostAddress/: test.cpp  test.py
qt6/tests/QImage/: test.cpp  test.py
qt6/tests/QJsonArray/: test.cpp  test.py
qt6/tests/QJsonDocument/: test.cpp  test.py
qt6/tests/QJsonObject/: test.cpp  test.py
qt6/tests/QJsonValue/: test.cpp  test.py
qt6/tests/QJsonValueConstRef/: test.cpp  test.py
qt6/tests/QJsonValueRef/: test.cpp  test.py
qt6/tests/QLine/: test.cpp  test.py
qt6/tests/QLineF/: test.cpp  test.py
qt6/tests/QList/: test.cpp  test.py
qt6/tests/QMap/: test.cpp  test.py
qt6/tests/QMultiHash/: test.cpp  test.py
qt6/tests/QMultiMap/: test.cpp  test.py
qt6/tests/QObject/: test.cpp  test.py
qt6/tests/QPoint/: test.cpp  test.py
qt6/tests/QPointF/: test.cpp  test.py
qt6/tests/QPolygon/: test.cpp  test.py
qt6/tests/QPolygonF/: test.cpp  test.py
qt6/tests/QRect/: test.cpp  test.py
qt6/tests/QRectF/: test.cpp  test.py
qt6/tests/QSet/: test.cpp  test.py
qt6/tests/QSize/: test.cpp  test.py
qt6/tests/QSizeF/: test.cpp  test.py
qt6/tests/QSizePolicy/: test.cpp  test.py
qt6/tests/QSpan/: test.cpp  test.py
qt6/tests/QString/: test.cpp  test.py
qt6/tests/QStringView/: test.cpp  test.py
qt6/tests/QTime/: test.cpp  test.py
qt6/tests/QUrl/: test.cpp  test.py
qt6/tests/QUuid/: test.cpp  test.py
qt6/tests/QVarLengthArray/: test.cpp  test.py
qt6/tests/QVariant/: test.cpp  test.py
rapidjson/: CMakeLists.txt
scripts/: all.py  nerix_common.py
sol2-lua/: CMakeLists.txt
sol2-lua/tests/: CMakeLists.txt
sol2-lua/tests/basic_reference/: test.cpp  test.py
sol2-lua/tests/frame_rec/: file.lua  test.cpp  test.py
sol2-lua/tests/include/: usertypes.hpp
test/: configuration.py  runtest.py  testlib.py
(+32 files in other folders)
